--- a/client/back-office/views/forum.html
+++ b/client/back-office/views/forum.html
@@ -260,7 +260,7 @@
           index +
           `').removeClass('hidden')}" 
 											class="flex gray text-xs m-1">
-								<u>Show more</u>
+								<p class="border-b-solid border-b-2 border-slate-400 gray">Show more</p>
 							</button>
 								<div id="card` +
           index +
@@ -286,7 +286,7 @@
           index +
           `').addClass('hidden')}"
 											class="flex hidden gray text-xs m-1">
-								<u>Show less</u>
+								<p class="border-b-solid border-b-2 border-slate-400 gray">Show less</p>
 							</button>
 						</div>
 					</div>
@@ -486,9 +486,9 @@
         id="sidebar"
       ></div>
       <div class="flex flex-col w-full p-5 pt-0 ml-0 md:p-5 md:ml-[106px]">
-        <div id="title" class="font-bold text-4xl sm:text-6xl m-4 self-center">
+        <h1 id="title" class="font-bold text-4xl sm:text-6xl m-4 self-center">
           POSTS
-        </div>
+        </h1>
         <div class="gray m-2 mb-1 self-center">
           Click on something followed by <i class="fa fa-copy"></i>
           to copy the info!
