--- a/client/back-office/views/home.html
+++ b/client/back-office/views/home.html
@@ -34,42 +34,42 @@
         {
           text: "customers",
           img: "../public/customers.png",
-          alt: "customers icon",
+          alt: "users management icon",
           href: "customers.html",
           company: true,
         },
         {
           text: "forum",
           img: "../public/forum.png",
-          alt: "forum icon",
+          alt: "post and forum management icon",
           href: "forum.html",
           company: false,
         },
         {
           text: "e-commerce",
           img: "../public/shop.png",
-          alt: "shop icon",
+          alt: "online shop icon",
           href: "ecommerce.html",
           company: false,
         },
         {
           text: "prenotations",
           img: "../public/schedule.png",
-          alt: "prenotation icon",
+          alt: "appointment and prenotation management icon",
           href: "prenotations.html",
           company: true,
         },
         {
           text: "Billing",
           img: "../public/billing.png",
-          alt: "billing icon",
+          alt: "invoice and billing section icon",
           href: "billing.html",
           company: true,
         },
         {
           text: "profile",
           img: "../public/companies.png",
-          alt: "companies icon",
+          alt: "data and companies management icon",
           href: "profile.html",
           company: true,
         },
@@ -126,9 +126,9 @@
         <div class="flex self-center flex-col w-full h-auto">
           <div class="flex flex-col text-center p-3 md:pb-6">
             <!-- TODO mettere if -> se admin Manage all your companies, se no va bene cosi-->
-            <div class="primary font-bold text-4xl mb-5 md:mb-0 md:text-6xl">
+            <h1 class="primary font-bold text-4xl mb-5 md:mb-0 md:text-6xl">
               Administration
-            </div>
+            </h1>
           </div>
           <div
             id="cards"
