--- a/client/back-office/views/login.html
+++ b/client/back-office/views/login.html
@@ -63,14 +63,14 @@
                       <img
                         class="mx-auto w-40"
                         src="../public/animal-house.png"
-                        alt="logo"
+                        alt="logo CasAnimale"
                       />
-                      <h4 class="text-xl font-semibold mt-4 mb-12 pb-1">
+                      <h1 class="text-xl font-semibold mt-4 mb-12 pb-1">
                         CasAnimale - Back Office
-                      </h4>
+                      </h1>
                     </div>
                     <form>
-                      <p class="mb-4">Please login to your account</p>
+                      <p class="mb-4">Please login to your account with <label for="emailTab">email</label> and <label for="passwordTab">password</label></p>
                       <div class="mb-4">
                         <input
                           type="text"
@@ -129,9 +129,9 @@
                   "
                 >
                   <div class="text-white px-4 py-6 md:p-12 md:mx-6">
-                    <h4 class="text-xl font-semibold mb-6 primary">
+                    <h2 class="text-xl font-semibold mb-6 primary">
                       We are more than just an animal business!
-                    </h4>
+                    </h2>
                     <p class="text-black">
                       If you aren't a company or an admin, please go back to the
                       <a
