--- a/client/back-office/views/billing.html
+++ b/client/back-office/views/billing.html
@@ -39,7 +39,7 @@
         id="sidebar"
       ></div>
       <div class="flex flex-col w-full p-5 pt-0 ml-0 md:p-5 md:ml-[106px]">
-        <div id="title" class="font-bold text-4xl sm:text-6xl m-4 self-center">BILLING</div>
+        <h1 id="title" class="font-bold text-4xl sm:text-6xl m-4 self-center">BILLING</h1>
         <div class="gray m-4 mb-1 self-center">
           Click on something followed by <i class="fa fa-copy"></i> to copy it!
         </div>
