--- a/client/back-office/views/customers.html
+++ b/client/back-office/views/customers.html
@@ -269,9 +269,9 @@
 							<div class="toshow` +
           index +
           `">
-								<span class="toshow` +
+								<label for="newVip` + index + `"class="toshow` +
           index +
-          ` hidden font-semibold">Vip: </span>
+          ` hidden font-semibold">Vip: </label>
 								<select
 									id="newVip` +
           index +
@@ -289,7 +289,7 @@
 								</select>
 							</div>
 						</div>
-						<div><span class="font-semibold">Name: </span><span class="tohidden` +
+						<div><label for="newName` + index + `" class="font-semibold">Name: </label><span class="tohidden` +
           index +
           `">` +
           name +
@@ -312,7 +312,7 @@
           ` change hidden px-1 rounded shadow-sm border-primary mb-1 bg-transparent"
 						/>
 						</div>
-						<div><span class="font-semibold">Surname: </span><span class="tohidden` +
+						<div><label for="newSurname` + index + `" class="font-semibold">Surname: </label><span class="tohidden` +
           index +
           `">` +
           surname +
@@ -339,7 +339,7 @@
           birth.substring(0, 10) +
           `
 						</div>
-						<div><span class="font-semibold">Email: </span>
+						<div><label for="newEmail` + index + `" class="font-semibold">Email: </label>
 							<button class="btn tohidden` +
           index +
           `" onclick="copy(this)">` +
@@ -377,12 +377,12 @@
           index +
           `').removeClass('hidden')}" 
 										class="flex gray text-xs m-1">
-							<u>Show more</u>
+							<p class="border-b-solid border-b-2 border-slate-400 gray">Show more</p>
 						</button>
 							<div id="expandCard` +
           index +
           `" class="hidden flex flex-col">
-								<div><span class="font-semibold">Password: </span><span class="tohidden` +
+								<div><label for="newPassword` + index + `" class="font-semibold">Password: </label><span class="tohidden` +
           index +
           `">` +
           password +
@@ -405,7 +405,7 @@
           ` change hidden px-1 rounded shadow-sm border-primary mb-1 bg-transparent"
 								/>
 								</div>
-								<div><span class="font-semibold">Favorite animal: </span><span class="tohidden` +
+								<div><label for="newFavanimal` + index +`" class="font-semibold">Favorite animal: </label><span class="tohidden` +
           index +
           `">` +
           favanimal +
@@ -448,7 +448,7 @@
 										class="tohidden` +
           index +
           ` flex hidden gray text-xs m-1">
-							<u>Show less</u>
+          <p class="border-b-solid border-b-2 border-slate-400 gray">Show less</p>
 						</button>
 					</div>
 					</div>
@@ -543,7 +543,7 @@
 
       const isVIP = (vip) => {
         if (vip === true)
-          return `<span class="font-semibold text-white bg-yellow-500 ml-3 p-1 rounded">VIP</span>`;
+          return `<span class="font-semibold primary bg-yellow-500 ml-3 p-1 rounded">VIP</span>`;
         else return "";
       };
       const showCart = (array) => {
@@ -593,9 +593,9 @@
         id="sidebar"
       ></div>
       <div class="flex flex-col w-full p-5 pt-0 ml-0 md:p-5 md:ml-[106px]">
-        <div id="title" class="font-bold text-4xl sm:text-6xl m-4 self-center">
+        <h1 id="title" class="font-bold text-4xl sm:text-6xl m-4 self-center">
           CUSTOMERS
-        </div>
+        </h1>
         <div class="gray m-2 mb-1 self-center">
           Click on something followed by
           <i class="fa fa-copy"></i> to copy it!
