--- a/client/back-office/views/ecommerce.html
+++ b/client/back-office/views/ecommerce.html
@@ -40,9 +40,9 @@
         id="sidebar"
       ></div>
       <div class="flex flex-col w-full p-5 pt-0 ml-0 md:p-5 md:ml-[106px]">
-        <div id="title" class="font-bold text-4xl sm:text-6xl m-4 mb-3 self-center">
+        <h1 id="title" class="font-bold text-4xl sm:text-6xl m-4 mb-3 self-center">
           ECOMMERCE
-        </div>
+        </h1>
         <div class="gray m-4 mb-1 self-center">
           Click on something followed by <i class="fa fa-copy"></i> to copy it!
         </div>
