logo backoffice e game

--- a/client/back-office/views/login.html
+++ b/client/back-office/views/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/style.css" />
     <script type="text/javascript" src="../script/index.js"></script>
-    <title>CasAnimale - Login</title>
+    <title>CasAnimale - BO Login</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <!--script src="../../node_modules/jquery/dist/jquery.min.js"></script-->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -61,12 +61,12 @@
                   <div class="md:p-12 md:mx-6">
                     <div class="text-center">
                       <img
-                        class="mx-auto w-40"
-                        src="../public/animal-house.png"
-                        alt="logo CasAnimale"
+                        class="mx-auto w-80"
+                        src="../public/CasAnimaleBO.png"
+                        alt="logo CasAnimale backoffice"
                       />
-                      <h1 class="text-xl font-semibold mt-4 mb-12 pb-1">
-                        CasAnimale - Back Office
+                      <h1 class="text-xl font-semibold primary mt-8 mb-7 pb-1 uppercase">
+                        Login
                       </h1>
                     </div>
                     <form>
