--- a/client/back-office/views/companies.html
+++ b/client/back-office/views/companies.html
@@ -710,7 +710,7 @@
                   <div>
                     <label for="newPassword` +
           index +
-          `" class="font-semibold">Password: </span>
+          `" class="font-semibold">Password: </label>
                     <input
                       type="text"
                       name="newPassword` +
