--- a/client/back-office/views/companies.html
+++ b/client/back-office/views/companies.html
@@ -418,7 +418,7 @@
           photo:
             $("#createPhoto").val() !== ""
               ? $("#createPhoto").val()
-              : "https://img.freepik.com/free-photo/veterinarian-checking-dog-medium-shot_23-2149143871.jpg?w=2000",
+              : "/f/company.png",
           type: $("#createProfession").val(),
           description: $("#createDescription").val(),
           cost_per_hour: $("#createCost").val(),
