--- a/client/back-office/views/login.html
+++ b/client/back-office/views/login.html
@@ -69,7 +69,7 @@
                         Login
                       </h1>
                     </div>
-                    <form>
+                    <form onsubmit="login()">
                       <p class="mb-4">Please login to your account with <label for="emailTab">email</label> and <label for="passwordTab">password</label></p>
                       <div class="mb-4">
                         <input
@@ -91,7 +91,7 @@
                         <button
                           id="loginButton"
                           class="inline-block px-6 py-2.5 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:shadow-lg focus:outline-none focus:ring-0 active:shadow-lg transition duration-150 ease-in-out w-full mb-3"
-                          type="button"
+                          type="submit"
                           data-mdb-ripple="true"
                           data-mdb-ripple-color="light"
                           style="
